--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "uuid": "^8.3.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
+    "vue-toastify": "^1.8.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
